# Ridgecrest-2019

./: .gitignore  altar.pfg  main.ipynb  profile.ipynb  profiling.ipynb  pyproject.toml
profiles/: profile-1.csv  profile-10.csv  profile-2.csv  profile-3.csv  profile-4.csv  profile-5.csv  profile-6.csv  profile-7.csv  profile-8.csv  profile-9.csv
scripts/: csi_inversion.ipynb  far_field.ipynb  prep_files_for_altar.py  sense_check.ipynb  visualise.ipynb
